create some animation and html attributes

--- a/Home.html
+++ b/Home.html
@@ -22,12 +22,13 @@
         </nav>
         <section class="center-part">
           <div class="left-container"></div>
-          <div class="right-container">
-            
-          </div>
-
+          <div class="right-container"></div>
         </section>
-
+        <hr>
+        <section class="bottum-center-part">
+          <div class="bottom-left-container"></div>
+          <div class="bottum-right-container"></div>
+        </section>
     </div>
   </body>
 </html>
