--- a/Home.html
+++ b/Home.html
@@ -8,16 +8,23 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <link rel="stylesheet" href="/Home.css" />
     <script src="/home.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
   </head>
   <body>
     <div class="container">
       <nav class="navigation">
           <a href="#"><span id="logo">Logo.</span></a>
           <ul class="nav-services">
-            <li><a href="">Project</a></li>
-            <li><a href="">Contact</a></li>
-            <li><a href="">Service</a></li>
-            <li><a href="">About</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Project</a></li>
+            <li><a href="#">Service</a></li>
+            <li><a href="#">About</a></li>
+        </ul>
+        <ul class="icons">
+          <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+          <li><a href="#"><i class="fa-brands fa-square-facebook"></i></a></li>
+          <li><a href="#"><i class="fa-brands fa-square-twitter"></i></a></li>
+          <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
         </ul>
         </nav>
         <section class="center-part">
@@ -27,7 +34,10 @@
         <hr>
         <section class="bottum-center-part">
           <div class="bottom-left-container"></div>
-          <div class="bottum-right-container"></div>
+          <div class="bottum-right-container">
+            <h2>Welcome to the <b> DeepGFX</b></h2>
+            <p>Hello i am Deepak kumar and. I am a graphics designer</p>
+          </div>
         </section>
     </div>
   </body>
