commit for deploy portfolio on netlify

--- a/Home.html
+++ b/Home.html
@@ -39,6 +39,11 @@
             <p>Hello i am Deepak kumar and. I am a graphics designer</p>
           </div>
         </section>
+        <section class="firts-Section">
+          <div class="image">
+            <img src="/images/Deepak photo.jpg" alt="Deepak">
+          </div>
+        </section>
     </div>
   </body>
 </html>
