add deepak image and other texts

--- a/Home.html
+++ b/Home.html
@@ -27,21 +27,26 @@
           <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
         </ul>
         </nav>
-        <section class="center-part">
-          <div class="left-container"></div>
-          <div class="right-container"></div>
+        <section class="second-container">
+          <div class="S-left-container"></div>
+          <div class="S-right-container"></div>
         </section>
         <hr>
-        <section class="bottum-center-part">
-          <div class="bottom-left-container"></div>
-          <div class="bottum-right-container">
-            <h2>Welcome to the <b> DeepGFX</b></h2>
-            <p>Hello i am Deepak kumar and. I am a graphics designer</p>
+        <section class="third-container">
+          <div class="th-left-container"></div>
+          <div class="th-right-container">
+            <h2>Welcome to the <b> DeepGFX.</b></h2>
+            <p>Hello i am Deepak kumar and. I am a graphics designer and web designer. i am a two year experience in graphics design and website design. and create interactice and creative templates.</p>
           </div>
         </section>
-        <section class="firts-Section">
-          <div class="image">
-            <img src="/images/Deepak photo.jpg" alt="Deepak">
+        <section class="forth-container">
+          <div class="overview">
+            <img src="/images/Deepak photo.jpg" id="dpk-img" width="150px" height="150px" alt="Deepak">
+            <div class="text-content">
+              <h2>Deepak kumar</h2>
+              <p>Hello everyone i am a graphics designer and web designer</p>
+              <p>and i am create interactive and creative websites and templates</p>
+            </div>
           </div>
         </section>
     </div>
