create user page

--- a/Home.html
+++ b/Home.html
@@ -27,19 +27,25 @@
           <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
         </ul>
         </nav>
-        <section class="second-container">
-          <div class="S-left-container"></div>
-          <div class="S-right-container"></div>
+        <section class="first-container">
+          <div class="f-left-container"></div>
+          <div class="f-right-container"></div>
         </section>
         <hr>
-        <section class="third-container">
-          <div class="th-left-container"></div>
-          <div class="th-right-container">
+        <section class="second-container">
+          <div class="s-left-container"></div>
+          <div class="s-right-container">
             <h2>Welcome to the <b> DeepGFX.</b></h2>
-            <p>Hello i am Deepak kumar and. I am a graphics designer and web designer. i am a two year experience in graphics design and website design. and create interactice and creative templates.</p>
+            <p>Hello i am Deepak kumar and. I am a graphics designer and web designer. i am a two year experience in graphics design and website design. I have create interactice and creative templates.</p>
           </div>
         </section>
-        <section class="forth-container">
+        <section class="third-container">
+          <div class="circle1"></div>
+          <div class="circle2"></div>
+          <div class="circle3"></div>
+          <div class="circle4"></div>
+          <div class="circle5"></div>
+          <div class="circle6"></div>
           <div class="overview">
             <img src="/images/Deepak photo.jpg" id="dpk-img" width="150px" height="150px" alt="Deepak">
             <div class="text-content">
