commit for some updates

--- a/Home.html
+++ b/Home.html
@@ -13,7 +13,7 @@
   <body>
     <div class="container">
       <nav class="navigation">
-          <a href="#"><span id="logo">Logo.</span></a>
+          <a href="#"><span id="logo">Deep.</span></a>
           <ul class="nav-services">
             <li><a href="#">Contact</a></li>
             <li><a href="#">Project</a></li>
