--- a/Home.html
+++ b/Home.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/Home.css" />
     <script src="/home.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+    <!-- <link rel="stylesheet" href="./heex.css"> -->
   </head>
   <body>
     <div class="container">
@@ -21,15 +22,131 @@
             <li><a href="#">About</a></li>
         </ul>
         <ul class="icons">
-          <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+          <li><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a></li>
           <li><a href="#"><i class="fa-brands fa-square-facebook"></i></a></li>
           <li><a href="#"><i class="fa-brands fa-square-twitter"></i></a></li>
           <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
         </ul>
         </nav>
         <section class="first-container">
-          <div class="f-left-container"></div>
-          <div class="f-right-container"></div>
+          <div class="first">
+            <span class="hex1" style="  font-size: 164px">&#x2B22;</span>
+            <span class="hex1" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex1" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex1" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex1" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex1" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex1" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex1" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex1" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex1" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex1" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex1" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex1" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex1" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex1" style=" font-size: 164px">&#x2B22;</span>
+          </div>
+          <div class="second">
+            <span class="hex2" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex2" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex2" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex2" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex2" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex2" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex2" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex2" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex2" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex2" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex2" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex2" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex2" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex2" style=" font-size: 164px">&#x2B22;</span>
+          </div>
+          <div class="third">
+            <span class="hex3" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex3" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex3" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex3" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex3" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex3" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex3" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex3" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex3" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex3" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex3" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex3" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex3" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex3" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex3" style=" font-size: 164px">&#x2B22;</span>
+          </div>
+          <div class="forth">
+            <span class="hex4" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex4" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex4" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex4" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex4" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex4" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex4" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex4" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex4" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex4" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex4" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex4" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex4" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex4" style=" font-size: 164px">&#x2B22;</span>
+          </div>
+          <div class="five">
+            <span class="hex5" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex5" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex5" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex5" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex5" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex5" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex5" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex5" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex5" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex5" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex5" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex5" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex5" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex5" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex5" style=" font-size: 164px">&#x2B22;</span>
+          </div>
+          <div class="six">
+            <span class="hex6" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex6" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex6" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex6" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex6" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex6" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex6" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex6" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex6" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex6" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex6" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex6" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex6" style=" font-size: 164px">&#x2B22;</span>
+            <span class="hex6" style=" font-size: 164px">&#x2B22;</span>
+          </div>
+          <div class="seven">
+              <span class="hex7" style=" font-size: 164px">&#x2B22;</span>
+              <span class="hex7" style=" font-size: 164px">&#x2B22;</span>
+              <span class="hex7" style=" font-size: 164px">&#x2B22;</span>
+              <span class="hex7" style=" font-size: 164px">&#x2B22;</span>
+              <span class="hex7" style=" font-size: 164px">&#x2B22;</span>
+              <span class="hex7" style=" font-size: 164px">&#x2B22;</span>
+              <span class="hex7" style=" font-size: 164px">&#x2B22;</span>
+              <span class="hex7" style=" font-size: 164px">&#x2B22;</span>
+              <span class="hex7" style=" font-size: 164px">&#x2B22;</span>
+              <span class="hex7" style=" font-size: 164px">&#x2B22;</span>
+              <span class="hex7" style=" font-size: 164px">&#x2B22;</span>
+              <span class="hex7" style=" font-size: 164px">&#x2B22;</span>
+              <span class="hex7" style=" font-size: 164px">&#x2B22;</span>
+              <span class="hex7" style=" font-size: 164px">&#x2B22;</span>
+              <span class="hex7" style=" font-size: 164px">&#x2B22;</span>
+            </div>
+          <!-- <div class="f-left-container"></div>
+          <div class="f-right-container"></div> -->
         </section>
         <hr>
         <section class="second-container">
