commit for some updates.

--- a/Home.html
+++ b/Home.html
@@ -7,13 +7,13 @@
     <title>Portfolio</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <link rel="stylesheet" href="/Home.css" />
-    <script src="/home.js"></script>
+    <script src="./Home.html"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <!-- <link rel="stylesheet" href="./heex.css"> -->
   </head>
   <body>
     <div class="container">
-      <nav class="navigation">
+      <nav class="navigation scroll">
           <a href="#"><span id="logo">Deep.</span></a>
           <ul class="nav-services">
             <li><a href="#">Contact</a></li>
@@ -29,122 +29,13 @@
         </ul>
         </nav>
         <section class="first-container">
-          <div class="first">
-            <span class="hex1" style="  font-size: 164px">&#x2B22;</span>
-            <span class="hex1" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex1" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex1" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex1" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex1" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex1" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex1" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex1" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex1" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex1" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex1" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex1" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex1" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex1" style=" font-size: 164px">&#x2B22;</span>
+          <img class="f-background-img" src="/images/high-angle-shot-beautiful-cityscape-sunset-new-york-city-usa.jpg" alt="">
+          <h2 class="intro-text">
+            I am Deepak kumar
+          </h2>
+          <div class="animated-text">
+
           </div>
-          <div class="second">
-            <span class="hex2" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex2" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex2" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex2" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex2" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex2" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex2" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex2" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex2" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex2" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex2" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex2" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex2" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex2" style=" font-size: 164px">&#x2B22;</span>
-          </div>
-          <div class="third">
-            <span class="hex3" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex3" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex3" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex3" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex3" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex3" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex3" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex3" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex3" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex3" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex3" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex3" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex3" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex3" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex3" style=" font-size: 164px">&#x2B22;</span>
-          </div>
-          <div class="forth">
-            <span class="hex4" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex4" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex4" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex4" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex4" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex4" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex4" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex4" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex4" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex4" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex4" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex4" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex4" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex4" style=" font-size: 164px">&#x2B22;</span>
-          </div>
-          <div class="five">
-            <span class="hex5" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex5" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex5" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex5" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex5" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex5" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex5" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex5" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex5" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex5" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex5" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex5" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex5" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex5" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex5" style=" font-size: 164px">&#x2B22;</span>
-          </div>
-          <div class="six">
-            <span class="hex6" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex6" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex6" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex6" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex6" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex6" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex6" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex6" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex6" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex6" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex6" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex6" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex6" style=" font-size: 164px">&#x2B22;</span>
-            <span class="hex6" style=" font-size: 164px">&#x2B22;</span>
-          </div>
-          <div class="seven">
-              <span class="hex7" style=" font-size: 164px">&#x2B22;</span>
-              <span class="hex7" style=" font-size: 164px">&#x2B22;</span>
-              <span class="hex7" style=" font-size: 164px">&#x2B22;</span>
-              <span class="hex7" style=" font-size: 164px">&#x2B22;</span>
-              <span class="hex7" style=" font-size: 164px">&#x2B22;</span>
-              <span class="hex7" style=" font-size: 164px">&#x2B22;</span>
-              <span class="hex7" style=" font-size: 164px">&#x2B22;</span>
-              <span class="hex7" style=" font-size: 164px">&#x2B22;</span>
-              <span class="hex7" style=" font-size: 164px">&#x2B22;</span>
-              <span class="hex7" style=" font-size: 164px">&#x2B22;</span>
-              <span class="hex7" style=" font-size: 164px">&#x2B22;</span>
-              <span class="hex7" style=" font-size: 164px">&#x2B22;</span>
-              <span class="hex7" style=" font-size: 164px">&#x2B22;</span>
-              <span class="hex7" style=" font-size: 164px">&#x2B22;</span>
-              <span class="hex7" style=" font-size: 164px">&#x2B22;</span>
-            </div>
           <!-- <div class="f-left-container"></div>
           <div class="f-right-container"></div> -->
         </section>
@@ -173,5 +64,7 @@
           </div>
         </section>
     </div>
+
+    <script src="./home.js"></script>
   </body>
 </html>
