--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                                         style="color:rgb(51, 77, 185)"> Git Repo </a></span>
                             </div>
                             <div class="demo-div">
-                                <span> <a href="https://sugar-cosmetics-clone-dks.netlify.app/" target="_blank"
+                                <span> <a href="https://deep-simulator.netlify.app/" target="_blank"
                                         style="color:rgb(51, 77, 185)"> Live Site </a></span>
                             </div>
                         </div>
@@ -300,7 +300,7 @@
                                     </div>
                                     <div class="demo-div">
                                         <span> <a
-                                                href="https://drive.google.com/file/d/1zpZNVvsK-EfNQJ06kTvgggMkrjQODslC/view?usp=sharing"
+                                                href="https://deep-weatherstation.netlify.app/"
                                                 target="_blank" style="color:rgb(51, 77, 185)"> Live Site </a></span>
                                     </div>
                                 </div>
